kubernetes/bootstrap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api-deployment
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels: { app: my-api }
  template:
    metadata: { labels: { app: my-api } }
    spec:
      containers:
        - name: api-container
          image: busybox
          command: ["sh","-c","while true; do sleep 3600; done"]
