kubernetes/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
  labels: { app: backend }
spec:
  selector: { app: backend }
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  type: ClusterIP
