kubernetes/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
  labels: { app: frontend }
spec:
  selector: { app: frontend }
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: LoadBalancer   # ya Ingress use karna ho to yahan ClusterIP
