kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    app: my-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
